fix: change scrollbar style

--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -25,15 +25,25 @@
     scroll-behavior: smooth;
 
     &::-webkit-scrollbar {
-      width: 2px;
+      width: 4px;
     }
 
     &::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.1);
     }
 
     &::-webkit-scrollbar-thumb {
       background-color: rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(0, 0, 0, 0.2);
+    }
+
+    &::-webkit-scrollbar-thumb:active {
+      background-color: rgba(0, 0, 0, 0.3);
     }
   }
 
